--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
     <div class="container">
@@ -31,7 +32,7 @@
             <div class="header__title">
                 <h1>Acopio de granos<br>Venta de Fitosanitarios</h1>
                 <h3 class="header__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
-                <input type="button" value="Contactanos" class="header__btn">
+                <input type="button" value="Contactanos" class="header__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">
             </div>
         </header>
         <main id="main">
@@ -53,16 +54,19 @@
                         <img src="img/img.jpg" alt="Fitosanitarios 3" class="service__galery__img">
                     </div>
                 </div>
+<!-- Call to action -->
                 <div class="action">
-                    <h2>Seguinos</h2>
+                    <h2 class="wow fadeInDown">Seguinos</h2>
                     <div class="action__content">
                         <a href="https://www.instagram.com/cosembrar" target="_blank" rel="noopener noreferrer" class="action__content__icons"><img src="img/instagram--white.png" alt="Logo Instagram"></a>
                         <a href="https://www.facebook.com/cosembrar" target="_blank" rel="noopener noreferrer" class="action__content__icons"><img src="img/facebook--white.png" alt="Logo Facebook"></a>
                         <a href="https://www.twitter.com/cosembrar" target="_blank" rel="noopener noreferrer"><img src="img/twitter--white.png" alt="Logo Twitter"></a>
                     </div>
                 </div>
+<!-- /Call to action -->
             </section>
         </main>
+<!-- Footer -->
         <footer class="footer" id="footer">
             <div class="footer__content footer__content--hidden footer--logo">
                 <a href="index.html">
@@ -103,6 +107,9 @@
             </div>
             <p class="footer__copyright">© 2022 Victoria Antonijevic</p>
         </footer>
+<!-- /Footer -->
     </div>
+    <script src="js/wow.min.js"></script>
+    <script>new WOW().init();</script>
 </body>
 </html>
