--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animate.css">
 </head>
 <body>
     <div class="container">
@@ -104,14 +105,17 @@
                     </table>
                 </div>
 <!-- /Tabla Price Acopio -->
+<!-- Call to action -->
                 <div class="action mt15">
                     <p class="colorWhite">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <div>
-                        <input type="button" value="Contactanos" class="btn">
+                        <input type="button" value="Contactanos" class="btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">
                     </div>
                 </div>
+<!-- /Call to action -->
             </section>
         </main>
+<!-- Footer -->
         <footer class="footer" id="footer">
             <div class="footer__content footer__content--hidden footer--logo">
                 <a href="../index.html">
@@ -152,6 +156,9 @@
             </div>
             <p class="footer__copyright">© 2022 Victoria Antonijevic</p>
         </footer>
+<!-- /Footer -->
     </div>
+    <script src="../js/wow.min.js"></script>
+    <script>new WOW().init();</script>
 </body>
 </html>
