--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -5,26 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--/Bootstrap-->
+    <!--Icon Bootstrap-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!--/Icon Bootstrap-->
+    <!--WOW-->
     <link rel="stylesheet" href="../css/animate.css">
+    <!--/WOW-->
+        <!--Estilos complementarios-->
+        <link rel="stylesheet" href="../css/style.css">
+    <!--/Estilos complementarios-->
 </head>
 <body>
-    <div class="container">
+    <div class="contains">
         <header class="header" id="header">
-            <nav class="nav">
-                <a href="../index.html">
-                    <img src="../img/logo.svg" alt="Logo de Cosembrar" srcset="" class="nav__logo">
-                </a>
-                <ul class="nav__list">
-                    <li class="nav__list__item"><a href="../index.html" class="nav__list__item__link">Inicio</a></li>
-                    <li class="nav__list__item"><a href="nosotros.html" class="nav__list__item__link">Nosotros</a></li>
-                    <li class="nav__list__item"><a href="acopio.html" class="nav__list__item__link--active">Acopio</a></li>
-                    <li class="nav__list__item"><a href="fitosanitarios.html" class="nav__list__item__link">Fitosanitarios</a></li>
-                    <li class="nav__list__item"><a href="contacto.html" class="nav__list__item__link">Contacto</a></li>
-                    <li class="nav__list__item"><a href="https://www.instagram.com/cosembrar" target="_blank" rel="noopener noreferrer" class="nav__list__item__link"><img src="../img/instagram.png" alt=""></a></li>
-                    <li class="nav__list__item"><a href="https://www.facebook.com/cosembrar" target="_blank" rel="noopener noreferrer" class="nav__list__item__link"><img src="../img/facebook.png" alt=""></a></li>
-                    <li class="nav__list__item"><a href="https://www.twitter.com/cosembrar" target="_blank" rel="noopener noreferrer" class="nav__list__item__link"><img src="../img/twitter.png" alt=""></a></li>
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light contains__nav">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../img/logo.svg" alt="Logo de Cosembrar" srcset="" class="nav__logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="nav__link--active" aria-current="page" href="acopio.html">Acopio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="fitosanitarios.html">Fitosanitarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.instagram.com/cosembrar" target="_blank"><i class="bi bi-instagram"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.facebook.com/cosembrar" target="_blank"><i class="bi bi-facebook"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.twitter.com/cosembrar" target="_blank"><i class="bi bi-twitter"></i></a>
+                        </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
             <div>
                 <img src="../img/acopio.jpg" alt="Acopio de Cereales Cosembrar" class="section__img" />
@@ -37,40 +68,40 @@
             <section>
                 <p class="intro mt15 mr--auto mb15 ml--auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>           
 <!-- Galeria img Acopio -->
-                <div class="card mt15 mr5 mb15 ml5">
-                    <figure class="card__text">
-                        <img src="../img/img.jpg" alt="Soja" class="card__img">
-                        <div class="p3">
-                            <h3>Soja</h3>
+                <div class="card__contains mt15 mr5 mb15 ml5">
+                    <figure class="card__contains__text">
+                        <img src="../img/img.jpg" alt="Soja" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Soja</p>
                         </div>
                     </figure>
-                    <figure class="card__text">
-                        <img src="../img/img.jpg" alt="Maiz" class="card__img">
-                        <div class="p3">
-                            <h3>Maiz</h3>
+                    <figure class="card__contains__text">
+                        <img src="../img/img.jpg" alt="Maiz" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Maiz</p>
                     </figure>
-                    <figure class="card__text">
-                        <img src="../img/img.jpg" alt="Sorgo" class="card__img">
-                        <div class="p3">
-                            <h3>Sorgo</h3>
+                    <figure class="card__contains__text">
+                        <img src="../img/img.jpg" alt="Sorgo" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Sorgo</p>
                         </div>
                     </figure>
-                    <figure class="card__text">
-                        <img src="../img/img.jpg" alt="Trigo" class="card__img">
-                        <div class="p3">
-                            <h3>Trigo</h3>
+                    <figure class="card__contains__text">
+                        <img src="../img/img.jpg" alt="Trigo" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Trigo</p>
                     </figure>
-                    <figure class="card__text">
-                        <img src="../img/img.jpg" alt="Girasol" class="card__img">
-                        <div class="p3">
-                            <h3>Girasol</h3>
+                    <figure class="card__contains__text">
+                        <img src="../img/img.jpg" alt="Girasol" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Girasol</p>
                         </div>
                     </figure>
                 </div>
 <!-- /Galeria img Acopio -->
 <!-- Tabla Price Acopio -->
-                <div class="prices">
-                    <h2 class="title--center">Pizarra Rosario</h2>
+                <div class="prices mb20">
+                    <h2 class="text-center mb-5 title--center">Pizarra Rosario</h2>
                     <table class="prices__table mr--auto ml--auto">
                         <tr class="prices__table__tr">
                             <td class="prices__table__td">Dolar</td>
@@ -106,10 +137,10 @@
                 </div>
 <!-- /Tabla Price Acopio -->
 <!-- Call to action -->
-                <div class="action mt15">
-                    <p class="colorWhite">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <div>
-                        <input type="button" value="Contactanos" class="btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">
+                <div class="text-center me-auto action">
+                    <p class="colorWhite px-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="action__content">
+                        <button type="button" class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
                     </div>
                 </div>
 <!-- /Call to action -->
@@ -141,8 +172,8 @@
             <div class="footer__content footer--contact">
                 <h4>Habla con nosotros</h4>
                 <div class="footer__content__item">
-                    <p class="footer__content__item__text">info@cosembrar.com.ar</p>
-                    <p class="footer__content__item__text">02326 45 3574</p>
+                    <p class="footer__content__item__text mb-1">info@cosembrar.com.ar</p>
+                    <p class="footer__content__item__text mb-1">02326 45 3574</p>
                     <a href="https://wa.me/34691675782" target="_blank" rel="noopener noreferrer" class="footer__content__item__link">Whatsapp</a>
                     <br>
                     <a href="contacto.html" class="footer__content__item__link">Contacto</a>
