--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
                         <li class="nav-item">
                             <a class="nav-link" id="nav__link--active" aria-current="page" href="index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="pages/acopio.html">Acopio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="pages/fitosanitarios.html">Fitosanitarios</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.instagram.com/cosembrar" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <li class="nav-item animation">
+                            <a class="nav-link icon__animation" href="https://www.instagram.com/cosembrar" target="_blank"><i class="bi bi-instagram"></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/cosembrar" target="_blank"><i class="bi bi-facebook"></i></a>
+                        <li class="nav-item animation">
+                            <a class="nav-link icon__animation" href="https://www.facebook.com/cosembrar" target="_blank"><i class="bi bi-facebook"></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.twitter.com/cosembrar" target="_blank"><i class="bi bi-twitter"></i></a>
+                        <li class="nav-item animation">
+                            <a class="nav-link icon__animation" href="https://www.twitter.com/cosembrar" target="_blank"><i class="bi bi-twitter"></i></a>
                         </li>
                         </ul>
                     </div>
@@ -68,7 +68,7 @@
         </header>
         <main id="main">
             <section>
-                <p class="intro mt15 mr--auto mb15 ml--auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
+                <p class="intro mt15 mr--auto mb15 ml--auto">Desde hace más de 20 años, realizamos acopio y acondicionamiento de cereales, venta de insumos agropecuarios y fitosanitarios, agregando valor a la cadena comercial de los agro-negocios y cumplimentando las necesidades de los productores.</p>
                 <div class="service">
                     <h2 class="text-center mb-5 title--center">Acopio</h2>
                     <div class="service__galery">
