--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -29,29 +29,29 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarText">
                         <ul class="navbar-nav mb-2 mb-lg-0">
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="nav__link--active" aria-current="page" href="nosotros.html">Nosotros</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="acopio.html">Acopio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="fitosanitarios.html">Fitosanitarios</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item hover--bold">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.instagram.com/cosembrar" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <li class="nav-item animation">
+                            <a class="nav-link icon__animation" href="https://www.instagram.com/cosembrar" target="_blank"><i class="bi bi-instagram"></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/cosembrar" target="_blank"><i class="bi bi-facebook"></i></a>
+                        <li class="nav-item animation">
+                            <a class="nav-link icon__animation" href="https://www.facebook.com/cosembrar" target="_blank"><i class="bi bi-facebook"></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.twitter.com/cosembrar" target="_blank"><i class="bi bi-twitter"></i></a>
+                        <li class="nav-item animation">
+                            <a class="nav-link icon__animation" href="https://www.twitter.com/cosembrar" target="_blank"><i class="bi bi-twitter"></i></a>
                         </li>
                         </ul>
                     </div>
