--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -157,7 +157,12 @@
         </footer>
 <!-- /Footer -->
     </div>
-    <script src="../js/wow.min.js"></script>
+<!-- Script WOW -->
+    <script src="js/wow.min.js"></script>
     <script>new WOW().init();</script>
+<!-- /Script WOW -->
+<!-- Script Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- /Script Bootstrap Bundle with Popper -->
 </body>
 </html>
