cambio fitosanitario por agroinsumo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="pages/acopio.html">Acopio</a>
                         </li>
                         <li class="nav-item hover--bold">
-                            <a class="nav-link" href="pages/fitosanitarios.html">Fitosanitarios</a>
+                            <a class="nav-link" href="pages/agroinsumos.html">Agroinsumos</a>
                         </li>
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -115,7 +115,7 @@
                     <li><a href="index.html" class="footer__content__item__link--active">Inicio</a></li>
                     <li><a href="pages/nosotros.html" class="footer__content__item__link">Nosotros</a></li>
                     <li><a href="pages/acopio.html" class="footer__content__item__link">Acopio</a></li>
-                    <li><a href="pages/fitosanitarios.html" class="footer__content__item__link">Fitosanitarios</a></li>
+                    <li><a href="pages/agroinsumos.html" class="footer__content__item__link">Agroinsumos</a></li>
                     <li><a href="pages/contacto.html" class="footer__content__item__link">Contacto</a></li>
                 </div>
             </div>
