--- a/pages/agroinsumos.html
+++ b/pages/agroinsumos.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
+    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="acopio.html">Acopio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="nav__link--active" aria-current="page" href="fitosanitarios.html">Fitosanitarios</a>
+                            <a class="nav-link" id="nav__link--active" aria-current="page" href="agroinsumos.html">Agroinsumos</a>
                         </li>
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -62,10 +62,10 @@
                 </div>
             </nav>
             <div>
-                <img src="../img/fitosanitariosCosembrar.jpg" alt="Fitosanitarios Cosembrar" class="section__img" />
+                <img src="../img/agroinsumosCosembrar.jpg" alt="Agroinsumos Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1 class="title--section ms-5">Fitosanitarios</h1>
+                <h1 class="title--section ms-5">Agroinsumos</h1>
             </div>
         </header>
         <main id="main">
@@ -101,7 +101,7 @@
                     <li><a href="../index.html" class="footer__content__item__link">Inicio</a></li>
                     <li><a href="nosotros.html" class="footer__content__item__link">Nosotros</a></li>
                     <li><a href="acopio.html" class="footer__content__item__link">Acopio</a></li>
-                    <li><a href="fitosanitarios.html" class="footer__content__item__link--active">Fitosanitarios</a></li>
+                    <li><a href="agroinsumos.html" class="footer__content__item__link--active">Agroinsumos</a></li>
                     <li><a href="contacto.html" class="footer__content__item__link">Contacto</a></li>
                 </div>
             </div>
