--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
+    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="acopio.html">Acopio</a>
                         </li>
                         <li class="nav-item hover--bold">
-                            <a class="nav-link" href="fitosanitarios.html">Fitosanitarios</a>
+                            <a class="nav-link" href="agroinsumos.html">Agroinsumos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="nav__link--active" aria-current="page" href="contacto.html">Contacto</a>
@@ -101,7 +101,7 @@
                             <a href="mailto:matiasramirez@cosembrar.com.ar" class="mails__mail">matiasramirez@cosembrar.com.ar</a>
                         </div>
                         <div class="text-center mb-3 contact__details--mails">
-                            <h3>Fitosanitarios</h3>
+                            <h3>Agroinsumos</h3>
                             <a href="mailto:ezequiel@cosembrar.com.ar" class="mails__mail">ezequiel@cosembrar.com.ar</a>
                             <br>
                             <a href="mailto:federico@cosembrar.com.ar" class="mails__mail">federico@cosembrar.com.ar</a>
@@ -157,7 +157,7 @@
                     <li><a href="../index.html" class="footer__content__item__link">Inicio</a></li>
                     <li><a href="nosotros.html" class="footer__content__item__link">Nosotros</a></li>
                     <li><a href="acopio.html" class="footer__content__item__link">Acopio</a></li>
-                    <li><a href="fitosanitarios.html" class="footer__content__item__link">Fitosanitarios</a></li>
+                    <li><a href="agroinsumos.html" class="footer__content__item__link">Agroinsumos</a></li>
                     <li><a href="contacto.html" class="footer__content__item__link--active">Contacto</a></li>
                 </div>
             </div>
