--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 </div>
                 <div class="service">
                     <h2 class="text-center mb-5 title--center">Agroinsumos</h2>
+                    <p class="text-center mb-5">Contamos con un equipo de ingenieros agrónomos <br>que brindan asesoramiento integral a los productores.</p>
                     <div class="service__galery">
                         <img src="img/img.jpg" alt="Fitosanitarios 1">
                         <img src="img/img.jpg" alt="Fitosanitarios 2">
