--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Cosembrar desde hace más de 20 años realiza acopio y acondicionamiento de cereales, venta de insumos agropecuarios, semillas y fitosanitarios, acompañando al productor">
+    <meta name="keywords" content="acopio, fitosanitarios, agroquímicos, agropecuarios, productores, cereal, cereales, cosembrar, granos, semilla, semillas, comercial, agro, agro-negocios, negocios, productos, agroinsumos, insumos, agroquímico, venta, acondicionamiento, silo, areco">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
@@ -62,7 +62,7 @@
                 </div>
             </nav>
             <div>
-                <img src="img/cosembrar.png" alt="Cosembrar" class="header__img" />
+                <img src="img/cosembrar.png" alt="Cosembrar Sacifia" class="header__img" />
             </div>
             <div class="header__title">
                 <h1>Acopio de granos<br>Venta de Agroinsumos</h1>
@@ -77,18 +77,18 @@
                     <h2 class="text-center mb-3 title--center">Acopio</h2>
                     <p class="text-center mb-5">Somos productores agropecuarios, <br>por lo cual entendemos la necesidad de un buen servicio</p>
                     <div class="service__galery">
-                        <img src="img/img.jpg" alt="Acopio 1">
-                        <img src="img/img.jpg" alt="Acopio 2">
-                        <img src="img/img.jpg" alt="Acopio 3">
+                        <img src="img/granoCosembrar.jpg" alt="Grano de cereal Cosembrar" class="service__galery--img">
+                        <img src="img/siloCosembrar.jpg" alt="Silos de acopio Cosembrar" class="service__galery--img">
+                        <img src="img/cerealCosembrar.jpg" alt="Cereal Cosembrrar" class="service__galery--img">
                     </div>
                 </div>
                 <div class="service">
-                    <h2 class="text-center mb-5 title--center">Agroinsumos</h2>
+                    <h2 class="text-center mb-3 title--center">Agroinsumos</h2>
                     <p class="text-center mb-5">Contamos con un equipo de ingenieros agrónomos <br>que brindan asesoramiento integral a los productores.</p>
                     <div class="service__galery">
-                        <img src="img/img.jpg" alt="Fitosanitarios 1">
-                        <img src="img/img.jpg" alt="Fitosanitarios 2">
-                        <img src="img/img.jpg" alt="Fitosanitarios 3">
+                        <img src="img/agoinsumoCerealTrigoCosembrar.jpg" alt="Agroinsumo trigo Cosembrar" class="service__galery--img">
+                        <img src="img/sojaCosembrar.jpg" alt="Soja Cosembrar" class="service__galery--img">
+                        <img src="img/hojaCosembrar.jpg" alt="Hojas Cosembrar" class="service__galery--img">
                     </div>
                 </div>
 <!-- Call to action -->
