--- a/pages/agroinsumos.html
+++ b/pages/agroinsumos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="En Cosembrar realizamos asesoramiento integral, vendemos agroinsumos, semillas, agroquímicos">
+    <meta name="keywords" content="calidad, productos, agroinsumos, semilla, agrónomos, productores, agroquímicos">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
@@ -70,17 +70,17 @@
         </header>
         <main id="main">
             <section>
-                <p class="intro mt15 mr--auto mb15 ml--auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="intro mt15 mr--auto mb15 ml--auto">Contamos con un equipo de productores e ingenieros agrónomos, brindamos asesoramiento integral, teniendo como objetivo hacer más eficiente el proceso de producción.</p>
                 <div class="service">
                     <div class="service__galery">
-                        <img src="../img/img.jpg" alt="Logo de marca 1" class="service__galery__img">
-                        <img src="../img/img.jpg" alt="Logo de marca 2" class="service__galery__img">
-                        <img src="../img/img.jpg" alt="Logo de marca 3" class="service__galery__img">
+                        <img src="../img/granoCosembrar.jpg" alt="Grano de cereal Cosembrar" class="service__galery--img">
+                        <img src="../img/hojaCosembrar.jpg" alt="Hoja planta Cosembrar" class="service__galery--img">
+                        <img src="../img/cerealCosembrar.jpg" alt="Cereal Cosembrar" class="service__galery--img">
                     </div>
                 </div>
 <!-- Call to action -->
                 <div class="text-center me-auto action">
-                    <p class="colorWhite px-5">Somos productores, entendemos tus necesidades</p>
+                    <p class="colorWhite px-5">Priorizamos calidad en nuestros productos</p>
                     <div class="action__content">
                         <button type="button" class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
                     </div>
