--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Somos Cosembrar, contamos con un equipo profesional de ingenieros agrónomos, realizamos acopio de cereales y venta de insumos para el agro">
+    <meta name="keywords" content="cosembrar, areco, acopio, agroinsumo, Buenos Aires, sacifia, argentina">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
@@ -65,7 +65,7 @@
                 <img src="../img/contactoCosembrar.jpg" alt="Contacto Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1 class="title--section ms-5">Contacto</h1>
+                <h1 class="title--section ms-5">Contacto, Cosembrar</h1>
             </div>
         </header>
         <main id="main">
