--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Nos dedicamos al acopio y acondicionamiento de cereales, semillas, granos, oleaginosas desde hace más de veinte años, acompañando y apoyando al productor">
+    <meta name="keywords" content="Cosembrar, acopio, semillas, granos, oleaginosas, soja, maíz, sorgo, girasol, trigo, productores, planta, equipamiento, esfuerzo, productor, acondicionamiento, secado, calidad">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
+    <title>Cosembrar acopio de semillas, granos, oleaginosas</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -70,33 +70,33 @@
         </header>
         <main id="main">
             <section>
-                <p class="intro mt15 mr--auto mb15 ml--auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>           
+                <p class="intro mt15 mr--auto mb15 ml--auto">Nuestra planta cuenta con el equipamiento de acopio, acondicionamiento y secado de granos, comprendemos y apoyamos el esfuerzo del productor.</p>
 <!-- Galeria img Acopio -->
                 <div class="card__contains mt15 mr5 mb15 ml5">
                     <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Soja" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Soja</p>
-                        </div>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Maiz" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Maiz</p>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Sorgo" class="card__contains__img">
+                        <img src="../img/sorgoCosembrar.jpg" alt="Sorgo" class="card__contains__img">
                         <div class="pt-3 text-center">
                             <p>Sorgo</p>
                         </div>
                     </figure>
                     <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Trigo" class="card__contains__img">
+                        <img src="../img/trigoCosembrar.jpg" alt="Trigo" class="card__contains__img">
                         <div class="pt-3 text-center">
                             <p>Trigo</p>
                     </figure>
                     <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Girasol" class="card__contains__img">
+                        <img src="../img/maizCosembrar.jpg" alt="Maiz" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Maiz</p>
+                    </figure>
+                    <figure class="card__contains__text">
+                        <img src="../img/acopioSojaCosembrar.jpg" alt="Soja" class="card__contains__img">
+                        <div class="pt-3 text-center">
+                            <p>Soja</p>
+                        </div>
+                    </figure>
+                    <figure class="card__contains__text">
+                        <img src="../img/girasolCosembrar.jpg" alt="Girasol" class="card__contains__img">
                         <div class="pt-3 text-center">
                             <p>Girasol</p>
                         </div>
