--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Cosembrar realiza acopio y acondicionamiento de cereales, venta de insumos agropecuarios y fitosanitarios, cumplimentando las necesidades de los productores.">
+    <meta name="keywords" content="acopio, fitosanitarios, agroinsumos, agroquímicos, agropecuarios, productores, cereal, cereales, cosembrar, granos, semilla, semillas, comercial, agro, agro-negocios, negocios, productos, insumos, agroquímico, acondicionamiento, calidad, servicio, areco">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
+    <title>Cosembrar más de 20 años realizando acopio de cereales y venta de agroinsumos</title>
     <link rel="shortcut icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -65,7 +65,7 @@
                 <img src="../img/nosotrosCosembrar.jpg" alt="Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1 class="title--section ms-5">Nosotros</h1>
+                <h1 class="title--section ms-5">Nosotros, Cosembrar Sacifia</h1>
             </div>
         </header>
         <main id="main">
@@ -77,22 +77,6 @@
                     Después de poco tiempo, se incorporaron la venta de insumos agropecuarios y fitosanitarios para cumplimentar las necesidades de los productores. <br><br>
                     Buscamos la excelencia de nuestros productos y servicios, priorizando la calidad, asumiendo el compromiso con nuestros clientes de generar vínculos comerciales duraderos, basados en buenos negocios, buen servicio y el valor de la confianza.</p>
                 </div>
-<!--
-                <div class="column mt15 mr5 mb15 ml5">
-                    <div class="column__text p-3">
-                        <h2 class="color--middle">Sede</h2>
-                        <p class="mt2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.  Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </div>
-                    <div class="column__text p-3">
-                        <h2 class="color--middle">Empleados</h2>
-                        <p class="mt2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.  Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </div>
-                    <div class="column__text p-3">
-                        <h2 class="color--middle">Clientes</h2>
-                        <p class="mt2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.  Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </div>
-                </div>
--->
 <!-- Call to action -->
                 <div class="text-center action">
                     <h2 class="wow fadeInDown">Seguinos</h2>
