--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -144,7 +144,8 @@
                 <div class="text-center me-auto action">
                     <p class="colorWhite px-5">Somos productores, entendemos tus necesidades</p>
                     <div class="action__content">
-                        <button type="button" class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
+                        <a class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s" href="contacto.html"
+                        >Contactanos</a>
                     </div>
                 </div>
 <!-- /Call to action -->
