--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                     </div>
                 </div>
             </nav>
+
+<!--
             <div>
                 <img src="img/cosembrar.png" alt="Cosembrar Sacifia" class="header__img" />
             </div>
@@ -69,6 +71,36 @@
                 <p class="header__subtitle">Más de 20 años junto al productor</p>
                 <button type="button" class="mt-3 pt-3 pb-3 header__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
             </div>
+-->
+
+
+        <video autoplay playsinline muted loop preload poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/oceanshot.jpg">
+            <!-- <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/ocean-small.webm" /> -->
+            <source src="img/2160p.mp4" />
+        </video>
+
+        <div class="header__title">
+            <h1>Acopio de granos<br>Venta de Agroinsumos</h1>
+            <p class="header__subtitle">Más de 20 años junto al productor</p>
+            <a href="pages/contacto.html" class="px-5 py-3 wow pulse animated action__btn" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</a>
+        </div>
+
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285 80" preserveAspectRatio="xMidYMid slice">
+            <defs>
+                <mask id="mask" x="0" y="0" width="100%" height="100%" >
+                <rect x="0" y="0" width="100%" height="100%" />
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 1280 660" style="enable-background:new 0 0 1280 660;" xml:space="preserve">
+                <path d="M520.59,555.88L0,660V0h1280v660L759.41,555.88C680.58,540.12,599.42,540.12,520.59,555.88z"/>
+                </svg>
+                </mask>
+            </defs>
+            <rect x="0" y="0" width="100%" height="100%" />
+        </svg>
+
+
+
+
         </header>
         <main id="main">
             <section>
@@ -153,5 +185,14 @@
 <!-- Script Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!-- /Script Bootstrap Bundle with Popper -->
+
+<script>
+    const video = document.querySelector("video");
+    if (window.matchMedia('(prefers-reduced-motion)').matches) {
+    video.removeAttribute("autoplay");
+    video.pause();
+}
+</script>
+
 </body>
 </html>
