--- a/pages/agroinsumos.html
+++ b/pages/agroinsumos.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="calidad, productos, agroinsumos, semilla, agrónomos, productores, agroquímicos">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
+    <title>Cosembrar acopio de cereales y venta de agroinsumos en San Antonio de Areco</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -82,7 +82,7 @@
                 <div class="text-center me-auto action">
                     <p class="colorWhite px-5">Priorizamos calidad en nuestros productos</p>
                     <div class="action__content">
-                        <button type="button" class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
+                        <a href="contacto.html" class="px-5 py-3 wow pulse animated action__btn" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</a>
                     </div>
                 </div>
 <!-- /Call to action -->
