--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="cosembrar, areco, acopio, agroinsumo, Buenos Aires, sacifia, argentina">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
+    <title>Cosembrar acopio de cereales y venta de agroinsumos en provincia de Buenos Aires</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
