--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <h2 class="text-center mb-5 title--center">Redes Sociales</h2>
+                        <h2 class="text-center mb-5 title--center mt20">Redes Sociales</h2>
                         <div class="contact__social">
                             <a href="https://www.instagram.com/cosembrar" target="_blank" rel="noopener noreferrer" class="mails__icons contact__link">
                                 <p class="me-2 icon__animation"><i class="bi bi-instagram"></i></p>
