--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                         <img src="img/hojaCosembrar.jpg" alt="Hojas Cosembrar" class="service__galery--img">
                     </div>
                 </div>
+                <a href="https://wa.me/34691675782" class="btn-float"><i class="bi bi-whatsapp brand--whatsapp--float"></i> <span class="hidden">¿Preguntas? Escribinos!</span></a>
 <!-- Call to action -->
                 <div class="text-center action">
                     <h2 class="wow fadeInDown">Seguinos</h2>
