--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -65,7 +65,7 @@
                 <img src="../img/nosotrosCosembrar.jpg" alt="Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1 class="title--section ms-5">Nosotros, Cosembrar Sacifia</h1>
+                <h1 class="title--section ms-5">Nosotros</h1>
             </div>
         </header>
         <main id="main">
