--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,7 +65,7 @@
                 <img src="../img/contactoCosembrar.jpg" alt="Contacto Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1 class="title--section ms-5">Contacto, Cosembrar</h1>
+                <h1 class="title--section ms-5">Contacto</h1>
             </div>
         </header>
         <main id="main">
