Incorporacion Semillas y pulido

--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -40,10 +40,13 @@
                             <a class="nav-link" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="nav__link--active" aria-current="page" href="acopio.html">Acopio</a>
+                            <a class="nav-link" id="nav__link--active" href="acopio.html">Acopio</a>
                         </li>
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="agroinsumos.html">Agroinsumos</a>
+                        </li>
+                        <li class="nav-item hover--bold">
+                            <a class="nav-link" href="semillas.html">Semillas</a>
                         </li>
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -61,90 +64,68 @@
                     </div>
                 </div>
             </nav>
-            <div>
-                <img src="../img/acopioCosembrar.jpg" alt="Acopio de Cereales Cosembrar" class="section__img" />
+            <div class="position__r">
+                <img src="../img/acopioCosembrar.jpeg" alt="Acopio de Cereales Cosembrar" class="section__img" />
+                <div class="elementor-background-overlay"></div>
             </div>
             <div class="header__title">
-                <h1 class="title--section ms-5">Acopio</h1>
+                <h5 class="title--section">Acopio</h5>
             </div>
         </header>
         <main id="main">
             <section>
-                <p class="intro mt15 mr--auto mb15 ml--auto">Nuestra planta cuenta con el equipamiento de acopio, acondicionamiento y secado de granos, comprendemos y apoyamos el esfuerzo del productor.</p>
-<!-- Galeria img Acopio -->
-                <div class="card__contains mt15 mr5 mb15 ml5">
-                    <figure class="card__contains__text">
-                        <img src="../img/sorgoCosembrar.jpg" alt="Sorgo" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Sorgo</p>
+                <div class="service__detail mt15 mb15">
+                    <div class="service__detail__text">
+                        <h1 class="mb__3">Acondicionamiento y acopio de cereal</h1>
+                        <p class="introSection mt-3 mb__3">Nuestra planta cuenta con el equipamiento de acopio, acondicionamiento y secado de granos, comprendemos y apoyamos el esfuerzo del productor.</p>
+                        <a href="pages/contacto.html" class="link__more">Contactanos <i class="bi bi-arrow-right-short size3"></i></a>
+                    </div>
+                    <div class="service__detail__images">
+                        <div class="service__detail__img position__r">
+                            <img src="../img/hojaCosembrar.png" alt="Hoja de Maiz" class="img__intro">
+                            <img src="../img/granoMaizCosembrar.jpeg" alt="Grano de Maiz" class="img__intro__rounded">
                         </div>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/trigoCosembrar.jpg" alt="Trigo" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Trigo</p>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/maizCosembrar.jpg" alt="Maiz" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Maiz</p>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/acopioSojaCosembrar.jpg" alt="Soja" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Soja</p>
-                        </div>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/girasolCosembrar.jpg" alt="Girasol" class="card__contains__img">
-                        <div class="pt-3 text-center">
-                            <p>Girasol</p>
-                        </div>
-                    </figure>
+                    </div>
                 </div>
-<!-- /Galeria img Acopio -->
-<!-- Tabla Price Acopio -->
-                <div class="prices mb20">
-                    <h2 class="text-center mb-5 title--center">Pizarra Rosario</h2>
-                    <table class="prices__table mr--auto ml--auto">
-                        <tr class="prices__table__tr">
-                            <td class="prices__table__td">Dolar</td>
-                            <td class="prices__table__td">$126</td>
-                            <td class="prices__table__td">USD1</td>
-                        </tr>
-                        <tr class="prices__table__tr">
-                            <td class="prices__table__td">Trigo</td>
-                            <td class="prices__table__td">$40000</td>
-                            <td class="prices__table__td">USD106</td>
-                        </tr>
-                        <tr class="prices__table__tr">
-                            <td class="prices__table__td">Soja</td>
-                            <td class="prices__table__td">$60000</td>
-                            <td class="prices__table__td">USD146</td>
-                        </tr>
-                        <tr class="prices__table__tr">
-                            <td class="prices__table__td">Maiz</td>
-                            <td class="prices__table__td">$60000</td>
-                            <td class="prices__table__td">USD146</td>
-                        </tr>
-                        <tr class="prices__table__tr">
-                            <td class="prices__table__td">Sorgo</td>
-                            <td class="prices__table__td">$50000</td>
-                            <td class="prices__table__td">USD106</td>
-                        </tr>
-                        <tr class="prices__table__tr">
-                            <td class="prices__table__td">Girasol</td>
-                            <td class="prices__table__td">$46000</td>
-                            <td class="prices__table__td">USD116</td>
-                        </tr>
-                    </table>
+<!-- Cotización Rosario -->
+                <h2 class="title--center--content">Pizarra Cotización Rosario</h2>
+                <div class="cotizacion mb15">
+                    <div class="cotizacion__dolar">
+                        <h3 class="mb__3">Dolar</h3>
+                        <div class="cotizacion__granos--details">
+                            <p class="cotizacion__granos--details--strong">$126 </p><p>Pesos Argentinos / 1 USD</p>
+                        </div>
+                        <p class="cotizacion--bank mt-3"><em>Cotización Banco Nación 10/02/2022</em></p>
+                    </div>
+                    <div class="cotizacion__granos">
+                        <h3 class="mb__3">Granos</h3>
+                        <div class="cotizacion__granos--details">
+                            <p><strong class="cotizacion__granos--details--strong">Soja </strong></p><p>AR$44.860 | USD423,97</p>
+                        </div>
+                        <div class="cotizacion__granos--details">
+                            <p><strong class="cotizacion__granos--details--strong">Maiz </strong></p><p>AR$25.400 | USD240,05</p>
+                        </div>
+                        <div class="cotizacion__granos--details">
+                            <p><strong class="cotizacion__granos--details--strong">Trigo </strong></p><p>AR$25.700 | USD242,89</p>
+                        </div>
+                        <div class="cotizacion__granos--details">
+                            <p><strong class="cotizacion__granos--details--strong">Girasol </strong></p><p>AR$52.905 | USD500,00</p>
+                        </div>
+                        <div class="cotizacion__granos--details">
+                            <p><strong class="cotizacion__granos--details--strong">Sorgo </strong></p><p>AR$23.275 | USD219,97</p>
+                        </div>
+                        <p class="cotizacion--bank mt-3"><em>Cotización Pizarra Rosario 10/02/2022</em></p>
+                    </div>
                 </div>
-<!-- /Tabla Price Acopio -->
+<!-- /Cotización Rosario -->
+<!-- Whatsapp float -->
+<a href="https://wa.me/34691675782" class="btn-float"><i class="bi bi-whatsapp brand--whatsapp--float"></i> <span class="hidden">¿Preguntas? Escribinos!</span></a>
+<!-- /Whatsapp float -->
 <!-- Call to action -->
                 <div class="text-center me-auto action">
-                    <p class="colorWhite px-5">Somos productores, entendemos tus necesidades</p>
+                    <p class="colorWhite px-5">Comprendemos y valoramos tu esfuerzo</p>
                     <div class="action__content">
-                        <button type="button" class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
+                        <a href="contacto.html" class="action__btn">Contactanos</a>
                     </div>
                 </div>
 <!-- /Call to action -->
@@ -164,6 +145,7 @@
                     <li><a href="nosotros.html" class="footer__content__item__link">Nosotros</a></li>
                     <li><a href="acopio.html" class="footer__content__item__link--active">Acopio</a></li>
                     <li><a href="agroinsumos.html" class="footer__content__item__link">Agroinsumos</a></li>
+                    <li><a href="semillas.html" class="footer__content__item__link">Semillas</a></li>
                     <li><a href="contacto.html" class="footer__content__item__link">Contacto</a></li>
                 </div>
             </div>
