--- a/pages/semillas.html
+++ b/pages/semillas.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="En Cosembrar realizamos asesoramiento integral, vendemos agroinsumos, semillas, agroquímicos">
-    <meta name="keywords" content="calidad, productos, agroinsumos, semilla, agrónomos, productores, agroquímicos">
+    <meta name="description" content="Nos dedicamos al acopio y acondicionamiento de cereales, semillas, granos, oleaginosas desde hace más de veinte años, acompañando y apoyando al productor">
+    <meta name="keywords" content="Cosembrar, acopio, semillas, granos, oleaginosas, soja, maíz, sorgo, girasol, trigo, productores, planta, equipamiento, esfuerzo, productor, acondicionamiento, secado, calidad">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de cereales y venta de agroinsumos</title>
+    <title>Cosembrar acopio de semillas, granos, oleaginosas</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -39,14 +39,14 @@
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="nosotros.html">Nosotros</a>
                         </li>
-                        <li class="nav-item hover--bold">
+                        <li class="nav-item">
                             <a class="nav-link" href="acopio.html">Acopio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="nav__link--active" aria-current="page" href="agroinsumos.html">Agroinsumos</a>
+                        <li class="nav-item hover--bold">
+                            <a class="nav-link" href="agroinsumos.html">Agroinsumos</a>
                         </li>
                         <li class="nav-item hover--bold">
-                            <a class="nav-link" href="semillas.html">Semillas</a>
+                            <a class="nav-link" id="nav__link--active" href="semillas.html">Semillas</a>
                         </li>
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -65,80 +65,43 @@
                 </div>
             </nav>
             <div class="position__r">
-                <img src="../img/agroinsumoCosembrar.jpeg" alt="Agroinsumos Cosembrar" class="section__img" />
+                <img src="../img/semillasCosembrar.jpeg" alt="Siembra con semillas de Cosembrar" class="section__img" />
                 <div class="elementor-background-overlay"></div>
             </div>
             <div class="header__title">
-                <h5 class="title--section">Agroinsumos</h5>
+                <h5 class="title--section">Semillas</h5>
             </div>
         </header>
         <main id="main">
             <section>
                 <div class="service__detail mt15 mb15">
                     <div class="service__detail__text">
-                        <h1 class="mb__3">Agroinsumos</h1>
-                        <p class="introSection mt-3 mb__3">Contamos con un equipo de productores e ingenieros agrónomos, brindamos asesoramiento integral, teniendo como objetivo hacer más eficiente el proceso de producción.</p>
-                        <a href="pages/contacto.html" class="link__more">Contactanos <i class="bi bi-arrow-right-short size3"></i></a>
+                        <h1 class="mb__3">Semillas</h1>
+                        <p class="introSection mt-3 mb__3">Contamos con una amplia gama de variedad de semillas de marcas líderes del mercado, somos un equipo de ingenieros agrónomos y productores, brindamos asesoramiento para cada zona de siembra específica.</p>
+                        <a href="contacto.html" class="link__more">Contactanos <i class="bi bi-arrow-right-short size3"></i></a>
                     </div>
                     <div class="service__detail__images">
                         <div class="service__detail__img position__r">
-                            <img src="../img/maizAgroinsumoCosembrar.jpeg" alt="Maiz calidad Cosembrar" class="img__intro__circle">
-                            <img src="../img/loteMaizCosembrar.jpeg" alt="Lote Maiz Cosembrar" class="img__intro__rounded">
+                            <img src="../img/semilleroCosembrar.jpeg" alt="Trasnportando Semillas" class="img__intro__circle">
+                            <img src="../img/sojaGranoCosembrar.jpeg" alt="Grano de soja" class="img__intro__rounded">
                         </div>
                     </div>
                 </div>
-<!-- Galeria Primeras marcas -->
-                <h2 class="text-center mb-3">Marcas representadas</h2>
-                <p class="text-center mb-5">Ponemos a tu alcance los mejores productos líderes del sector</p>
-                <div class="products mb15">
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/syngentaCosembrar.svg" alt="Logo Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/integraCosembrar.svg" alt="Logo Integra Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/ampligoCosembrar.svg" alt="Logo Ampligo Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/seedcareCosembrar.svg" alt="Seedcare Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/miravisduoCosembrar.svg" alt="Miravis duo Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/eddusCosembrar.svg" alt="Eddus Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/engeoCosembrar.svg" alt="Engeo Syngenta"/>
-                        </div>
-                    </div>
-                    <div class="products__brand">
-                        <div class="products__brand__img">
-                            <img src="../img/productosCosembrar/nkSemillasCosembrar.svg" alt="Logo NK Semillas"/>
-                        </div>
+<!-- Galeria Semillas -->
+                <div class="products__galery mb15">
+                    <div class="products__galery__content">
+                        <img src="../img/analisisTierraCosembar.jpeg" alt="Analisis de tierra" class="products__galery__content__img">
+                        <img src="../img/campoTrigoCosembrar.jpeg" alt="Campo de trigo" class="products__galery__content__img">
+                        <img src="../img/calidadTrigoCosembrar.jpeg" alt="Calidad trigo" class="products__galery__content__img">
                     </div>
                 </div>
-<!-- /Galeria Primeras marcas -->
+<!-- /Galeria Semillas -->
 <!-- Whatsapp float -->
 <a href="https://wa.me/34691675782" class="btn-float"><i class="bi bi-whatsapp brand--whatsapp--float"></i> <span class="hidden">¿Preguntas? Escribinos!</span></a>
 <!-- /Whatsapp float -->
 <!-- Call to action -->
                 <div class="text-center me-auto action">
-                    <p class="colorWhite px-5">Somos productores, entendemos tus necesidades</p>
+                    <p class="colorWhite px-5">Priorizamos calidad en nuestros productos</p>
                     <div class="action__content">
                         <a href="contacto.html" class="action__btn">Contactanos</a>
                     </div>
@@ -159,8 +122,8 @@
                     <li><a href="../index.html" class="footer__content__item__link">Inicio</a></li>
                     <li><a href="nosotros.html" class="footer__content__item__link">Nosotros</a></li>
                     <li><a href="acopio.html" class="footer__content__item__link">Acopio</a></li>
-                    <li><a href="agroinsumos.html" class="footer__content__item__link--active">Agroinsumos</a></li>
-                    <li><a href="semillas.html" class="footer__content__item__link">Semillas</a></li>
+                    <li><a href="agroinsumos.html" class="footer__content__item__link">Agroinsumos</a></li>
+                    <li><a href="semillas.html" class="footer__content__item__link--active">Semillas</a></li>
                     <li><a href="contacto.html" class="footer__content__item__link">Contacto</a></li>
                 </div>
             </div>
